--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -73,5 +73,5 @@ swagger.licenseUrl= http://www.apache.org/licenses/LICENSE-2.0.html
 swagger.basePackage=com.flyme.star.hijpa.web
 swagger.groupName= \u9ED8\u8BA4API\u793A\u4F8B\u5206\u7EC4
 swagger.contactName= flyme
-swagger.contactUrl= https://github.com/wendell-dev/restful-api-demo.git
+swagger.contactUrl= https://github.com/dawnFlyme/hijpa.git
 swagger.contactEmail= itflyme_s@126.com
